fix: add index.html (copy of index-v39.html) for root route

--- a/index.html
+++ b/index.html
@@ -1,111 +1,87 @@
-﻿<!doctype html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>HomeRates.ai — Chat Interface (v39)</title>
-
-  <!-- Icons/branding from assets/ -->
-  <link rel="icon" href="assets/favicon.ico" sizes="any">
-  <link rel="icon" href="assets/HR-logo.svg" type="image/svg+xml">
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>HomeRates.ai  Chat</title>
+  <meta name="description" content="Live mortgage rates and chat for homebuyers and homeowners." />
 
   <style>
-    :root {
-      --bg:#0b0b0f; --fg:#e7e7ee; --muted:#a6a6b3;
-      --panel:#13131a; --stroke:#1d1d26; --chip:#17171f;
-      --accent:#4da3ff; --accent-ink:#001028;
-    }
-    * { box-sizing:border-box }
-    html, body {
-      height:100%; margin:0; background:var(--bg); color:var(--fg);
-      font:16px/1.45 system-ui,-apple-system,"Segoe UI",Roboto,Arial,sans-serif;
-    }
-    a { color:var(--accent); text-decoration:none }
-
-    /* App layout */
-    .app { display:grid; grid-template-columns:260px 1fr; min-height:100vh }
-    .sidebar {
-      background:var(--panel); border-right:1px solid var(--stroke);
-      padding:14px; overflow:auto;
-    }
-    .brand { display:flex; align-items:center; gap:8px; font-weight:700; margin:6px 0 14px }
-    .brand img { width:22px; height:22px }
-
-    .btn {
-      display:block; width:100%; margin:6px 0; padding:10px 12px;
-      border-radius:10px; border:1px solid #2a2a35; background:var(--chip);
-      color:var(--fg); text-align:left; cursor:pointer;
-    }
-    .side-sep { border-color:var(--stroke); margin:12px 0 }
-
-    /* Chat column */
-    .main { display:flex; flex-direction:column; min-width:0 }
-    #thread { flex:1; overflow:auto; padding:16px }
-    .msg {
-      background:#0f0f15; border:1px solid var(--stroke); border-radius:12px;
-      padding:12px; margin:0 0 12px; white-space:pre-wrap;
-    }
-    .msg.user { background:#11111a }
-
-    .composer-wrap { border-top:1px solid var(--stroke); padding:10px; background:var(--panel) }
-    #composer { display:flex; gap:8px }
-    #query {
-      flex:1; min-height:48px; max-height:160px; resize:vertical;
-      border-radius:10px; border:1px solid #2a2a35; background:#0f0f15; color:var(--fg); padding:10px;
-    }
-    #send {
-      min-width:110px; border-radius:10px; border:1px solid #2a2a35;
-      background:var(--accent); color:var(--accent-ink); font-weight:600; cursor:pointer;
-    }
-
-    /* Build/status */
-    #build,#loading { position:fixed; right:12px; opacity:.6; font:12px system-ui }
-    #build { bottom:10px } #loading { bottom:28px }
-
-    @media (max-width:880px) {
-      .app { grid-template-columns:1fr }
-      .sidebar { display:none }
-    }
+    :root { --fg:#111; --muted:#666; --bg:#fff; --accent:#0b5fff; }
+    *{box-sizing:border-box}
+    body{margin:0;font:16px/1.5 system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Helvetica Neue,Arial,Noto Sans,sans-serif;color:var(--fg);background:var(--bg)}
+    header{padding:20px 16px;border-bottom:1px solid #eee}
+    .wrap{max-width:840px;margin:0 auto;padding:16px}
+    #rates{margin:8px 0;font:14px/1.4 system-ui}
+    .muted{color:var(--muted)}
+    .chip{display:inline-block;padding:.2rem .5rem;border:1px solid #ddd;border-radius:999px;font-size:12px;margin-right:6px}
+    .chat{margin-top:16px;border:1px solid #eee;border-radius:12px;padding:12px}
+    .chat textarea{width:100%;min-height:90px;border:1px solid #ddd;border-radius:8px;padding:10px;font:inherit}
+    .chat button{margin-top:8px;padding:10px 14px;border-radius:8px;border:1px solid #ddd;background:#f7f7f7;cursor:pointer}
+    .chat button:hover{background:#f0f0f0}
+    pre.result{white-space:pre-wrap;background:#fafafa;border:1px solid #eee;padding:10px;border-radius:8px;overflow:auto}
   </style>
+
+  <!-- Defer-load the rates widget -->
+  <script src="/rates.v39.js" defer></script>
 </head>
-
 <body>
-  <div class="app">
-    <!-- Left sidebar -->
-    <aside class="sidebar">
-      <div class="brand">
-        <img src="assets/HR-logo.svg" alt="HR Logo" onerror="this.style.display='none'">
-        HomeRates.ai
+  <header>
+    <div class="wrap">
+      <h1 style="margin:0;">HomeRates.ai</h1>
+      <div class="muted">Trusted, direct answers for buyers, owners, and pros.</div>
+
+      <!--  Widget container lives in the BODY -->
+      <div id="rates"><em>Loading live mortgage rates</em></div>
+
+      <div style="margin-top:8px">
+        <span class="chip">Ask: 10-year treasury</span>
+        <span class="chip">30-year fixed rate</span>
+        <span class="chip">Seller credits today</span>
       </div>
+    </div>
+  </header>
 
-      <button class="btn" id="newChatBtn">New Chat</button>
-      <button class="btn" id="saveChatBtn">Save Chat</button>
-      <button class="btn" id="newProjectBtn">New Project</button>
+  <main class="wrap">
+    <!-- Simple chat block that talks to /api/chat-v39 -->
+    <section class="chat">
+      <label for="q"><strong>Try me:</strong></label>
+      <textarea id="q" placeholder="Type a mortgage or market question"></textarea>
+      <button id="send">Ask</button>
+      <pre id="out" class="result" style="display:none"></pre>
+    </section>
+  </main>
 
-      <hr class="side-sep">
-      <div id="projectsList"></div>
+  <script>
+  // Tiny chat harness hitting /api/chat-v39
+  (function(){
+    const $ = (s)=>document.querySelector(s);
+    const q = $('#q'), btn = $('#send'), out = $('#out');
 
-      <hr class="side-sep">
-      <div id="savedThreads"></div>
-    </aside>
+    async function ask(text){
+      const r = await fetch('/api/chat-v39', {
+        method:'POST',
+        headers:{'Content-Type':'application/json'},
+        body: JSON.stringify({ text })
+      });
+      const j = await r.json().catch(()=>({ok:false,error:'Bad JSON'}));
+      return j;
+    }
 
-    <!-- Chat column -->
-    <main class="main">
-      <div id="thread" aria-live="polite"></div>
-
-      <div class="composer-wrap">
-        <form id="composer">
-          <textarea id="query" placeholder="Ask about mortgages, payments, seller credits…"></textarea>
-          <button id="send" type="submit">Send</button>
-        </form>
-      </div>
-    </main>
-  </div>
-
-  <span id="loading"></span>
-  <span id="build"></span>
-
-  <!-- Main app logic (v39 calls /api/chat) -->
-  <script src="main.v39.js" defer></script>
+    btn.addEventListener('click', async ()=>{
+      const text = (q.value||'').trim();
+      if (!text) return;
+      btn.disabled = true; out.style.display='block'; out.textContent = 'Thinking';
+      try {
+        const j = await ask(text);
+        out.textContent = JSON.stringify(j, null, 2);
+      } catch (e) {
+        out.textContent = 'Error: ' + (e?.message || e);
+      } finally {
+        btn.disabled = false;
+      }
+    });
+  })();
+  </script>
 </body>
 </html>
