chore(ui): remove index-v39; force SPA to /index.html; cache-bust 20251010172723

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,11 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>HomeRates.ai Chat</title>
-  <link rel="stylesheet" href="styles.css"/>
+  <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <title>HomeRates.ai Chat  20251010172723</title>
+  <link rel="stylesheet" href="styles.css?v=20251010172723"/>
+  <link rel="icon" href="assets/HR-logo.svg"/>
 </head>
 <body>
   <header class="app-header">
@@ -21,7 +22,7 @@
     <aside class="sidebar">
       <nav class="nav">
         <div class="nav-section">Quick actions</div>
-        <button class="nav-btn" data-prompt="What are today’s 30-year fixed rates?">Rates today</button>
+        <button class="nav-btn" data-prompt="What are todays 30-year fixed rates?">Rates today</button>
         <button class="nav-btn" data-prompt="Compare FHA vs Conventional for 5% down, 760 FICO.">FHA vs Conventional</button>
         <button class="nav-btn" data-prompt="Explain 2-1 buydown with an example at $700k in CA.">2-1 Buydown</button>
         <button class="nav-btn" data-prompt="What DTI and reserves for a 2-4 unit investment property?">Investor rules</button>
@@ -35,6 +36,7 @@
         <button class="nav-btn" id="btn-copy-last">Copy last answer</button>
         <button class="nav-btn" id="btn-clear">Clear chat</button>
       </nav>
+
       <div class="sidebar-footer">
         <div class="mini">Need a formal quote?</div>
         <a class="cta" href="mailto:rayaan@homerates.ai?subject=Rate%20Quote%20Request">Get a Loan Estimate</a>
@@ -56,6 +58,7 @@
     </main>
   </div>
 
-  <script src="main.js"></script>
+  <script src="main.js?v=20251010172723"></script>
 </body>
 </html>
+
