fix(api): drop legacy single-file routes so folder handlers take effect

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>HomeRates.ai Chat  20251010172723</title>
+  <title>HomeRates.ai Chat  20251010172723  20251010203040</title>
   <link rel="stylesheet" href="/styles.css?v=20251010172723">
 </head>
 <body>
@@ -26,4 +26,5 @@
   <script src="/main.js?v=20251010172723"></script>
 </body>
 </html>
+
 
