feat(ui): inject build-footer.js before </body>

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,9 @@
   </main>
 
   <script src="/main.js?v=20251010172723"></script>
+  <script src="/build-footer.js"></script>
 </body>
 </html>
+
 
 
