fix(ui): remove hard-coded build strings; header now loads from build-meta.json

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       <img src="/assets/hr-logo.svg?v=20251010172723" alt="HomeRates.ai" class="logo"/>
       <span class="brand">HomeRates.ai</span>
     </div>
-    <div class="env">Build 20251010172723</div>
+    <div class="env" id="buildHeaderVersion"></div>
   </header>
 
   <main id="app" class="container">
@@ -27,6 +27,7 @@
   <script src="/build-footer.js"></script>
 </body>
 </html>
+
 
 
 
