feat: add index.html with HomeRates mount

--- a/index.html
+++ b/index.html
@@ -1,87 +1,5 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>HomeRates.ai  Chat</title>
-  <meta name="description" content="Live mortgage rates and chat for homebuyers and homeowners." />
-
-  <style>
-    :root { --fg:#111; --muted:#666; --bg:#fff; --accent:#0b5fff; }
-    *{box-sizing:border-box}
-    body{margin:0;font:16px/1.5 system-ui,-apple-system,Segoe UI,Roboto,Ubuntu,Cantarell,Helvetica Neue,Arial,Noto Sans,sans-serif;color:var(--fg);background:var(--bg)}
-    header{padding:20px 16px;border-bottom:1px solid #eee}
-    .wrap{max-width:840px;margin:0 auto;padding:16px}
-    #rates{margin:8px 0;font:14px/1.4 system-ui}
-    .muted{color:var(--muted)}
-    .chip{display:inline-block;padding:.2rem .5rem;border:1px solid #ddd;border-radius:999px;font-size:12px;margin-right:6px}
-    .chat{margin-top:16px;border:1px solid #eee;border-radius:12px;padding:12px}
-    .chat textarea{width:100%;min-height:90px;border:1px solid #ddd;border-radius:8px;padding:10px;font:inherit}
-    .chat button{margin-top:8px;padding:10px 14px;border-radius:8px;border:1px solid #ddd;background:#f7f7f7;cursor:pointer}
-    .chat button:hover{background:#f0f0f0}
-    pre.result{white-space:pre-wrap;background:#fafafa;border:1px solid #eee;padding:10px;border-radius:8px;overflow:auto}
-  </style>
-
-  <!-- Defer-load the rates widget -->
-  <script src="/rates.v39.js" defer></script>
-</head>
-<body>
-  <header>
-    <div class="wrap">
-      <h1 style="margin:0;">HomeRates.ai</h1>
-      <div class="muted">Trusted, direct answers for buyers, owners, and pros.</div>
-
-      <!--  Widget container lives in the BODY -->
-      <div id="rates"><em>Loading live mortgage rates</em></div>
-
-      <div style="margin-top:8px">
-        <span class="chip">Ask: 10-year treasury</span>
-        <span class="chip">30-year fixed rate</span>
-        <span class="chip">Seller credits today</span>
-      </div>
-    </div>
-  </header>
-
-  <main class="wrap">
-    <!-- Simple chat block that talks to /api/chat-v39 -->
-    <section class="chat">
-      <label for="q"><strong>Try me:</strong></label>
-      <textarea id="q" placeholder="Type a mortgage or market question"></textarea>
-      <button id="send">Ask</button>
-      <pre id="out" class="result" style="display:none"></pre>
-    </section>
-  </main>
-
-  <script>
-  // Tiny chat harness hitting /api/chat-v39
-  (function(){
-    const $ = (s)=>document.querySelector(s);
-    const q = $('#q'), btn = $('#send'), out = $('#out');
-
-    async function ask(text){
-      const r = await fetch('/api/chat-v39', {
-        method:'POST',
-        headers:{'Content-Type':'application/json'},
-        body: JSON.stringify({ text })
-      });
-      const j = await r.json().catch(()=>({ok:false,error:'Bad JSON'}));
-      return j;
-    }
-
-    btn.addEventListener('click', async ()=>{
-      const text = (q.value||'').trim();
-      if (!text) return;
-      btn.disabled = true; out.style.display='block'; out.textContent = 'Thinking';
-      try {
-        const j = await ask(text);
-        out.textContent = JSON.stringify(j, null, 2);
-      } catch (e) {
-        out.textContent = 'Error: ' + (e?.message || e);
-      } finally {
-        btn.disabled = false;
-      }
-    });
-  })();
-  </script>
-</body>
-</html>
+<script type="module">
+  import React from "https://unpkg.com/react@18/umd/react.production.min.js";
+  import { createRoot } from "https://unpkg.com/react-dom@18/umd/react-dom.production.min.js";
+  // note: UMD isn't ESM; if you hit issues, keep esm.sh.
+</script>
