--- a/public/index.html
+++ b/public/index.html
@@ -4,31 +4,14 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>HomeRates</title>
-
-  <!-- Tailwind via CDN (zero-build) -->
   <script src="https://cdn.tailwindcss.com"></script>
-
-  <style>
-    html, body { height: 100%; }
-    body {
-      background: #fff;
-      color: #0b0b0b;
-      font-family: ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji";
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
-    }
-  </style>
 </head>
 <body class="bg-white">
-  <!-- HR-LANDING-MARKER -->
   <div id="root"></div>
-
-  <!-- React + your app (no build step) -->
   <script type="module">
     import React from "https://esm.sh/react@18";
     import { createRoot } from "https://esm.sh/react-dom@18/client";
-    import HomeRatesApp from "./HomeRatesApp.js"; // same folder as this file
-
+    import HomeRatesApp from "./HomeRatesApp.js";  // <— note the "./"
     const root = createRoot(document.getElementById("root"));
     root.render(React.createElement(HomeRatesApp));
   </script>
