--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <script type="module">
     import React from "https://esm.sh/react@18";
     import { createRoot } from "https://esm.sh/react-dom@18/client";
-    import HomeRatesApp from "./HomeRatesApp.js";  // <— note the "./"
+    import HomeRatesApp from "./HomeRatesApp.js";  <!-- same folder -->
     const root = createRoot(document.getElementById("root"));
     root.render(React.createElement(HomeRatesApp));
   </script>
