--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>HomeRates</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    html, body { height: 100%; }
-    body { font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji", "Segoe UI Emoji"; }
-  </style>
 </head>
 <body class="bg-white">
+  <!-- Probe 1: proves index.html executed -->
   <div id="root"></div>
-  <script type="module">
-    import React from "https://esm.sh/react@18";
-    import { createRoot } from "https://esm.sh/react-dom@18/client";
-    import HomeRatesApp from "./HomeRatesApp.js";
-    const root = createRoot(document.getElementById("root"));
-    root.render(React.createElement(HomeRatesApp));
-  </script>
+  <div id="hr-index-probe" class="mx-auto max-w-6xl px-4 py-2 text-xs text-zinc-600">
+    index.html loaded 
+  </div>
+
+  <!-- React globals (no ESM import needed) -->
+  <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
+  <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
+
+  <!-- Load your app file from ROOT (not /public) -->
+  <script src="./HomeRatesApp.js"></script>
 </body>
 </html>
