--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8" />
@@ -8,12 +8,13 @@
 </head>
 <body class="bg-white">
   <div id="root"></div>
-  <script type="module">
-    import React from "https://esm.sh/react@18";
-    import { createRoot } from "https://esm.sh/react-dom@18/client";
-    import HomeRatesApp from "./HomeRatesApp.js";  <!-- same folder -->
-    const root = createRoot(document.getElementById("root"));
-    root.render(React.createElement(HomeRatesApp));
-  </script>
+  <div id="hr-index-probe" class="mx-auto max-w-6xl px-4 py-2 text-xs text-zinc-600">index.html loaded </div>
+
+  <!-- React UMD -->
+  <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
+  <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
+
+  <!-- Load app from same folder -->
+  <script src="./HomeRatesApp.js"></script>
 </body>
 </html>
