fix(branding): update asset references to homerates-* canon

--- a/public/index.legacy.html
+++ b/public/index.legacy.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
@@ -9,7 +9,7 @@
 <body>
   <header class="topbar">
     <div class="left">
-      <img src="/assets/hr-logo.svg?v=20251010172723" alt="HomeRates.ai" class="logo"/>
+      <img src="/assets/homerates-mark.svg" alt="HomeRates.ai" class="logo"/>
       <span class="brand">HomeRates.ai</span>
     </div>
     <div class="env" id="buildHeaderVersion"></div>
@@ -27,6 +27,7 @@
   <script src="/build-footer.js"></script>
 </body>
 </html>
+
 
 
 
