build(css): enable Tailwind PostCSS build on deploy; swap CDN for /assets/app.css

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>HomeRates</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="/assets/app.css">
 </head>
 <body class="bg-white">
   <div id="root"></div>
@@ -18,3 +18,4 @@
   <script src="./HomeRatesApp.js"></script>
 </body>
 </html>
+
