--- a/public/index.legacy.html
+++ b/public/index.legacy.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>HomeRates.ai Chat  20251010172723  20251010203040</title>
   <link rel="stylesheet" href="/styles.css?v=20251010172723">
+  <link rel="stylesheet" href="/assets/app.css">
 </head>
 <body>
   <header class="topbar">
@@ -27,6 +28,7 @@
   <script src="/build-footer.js"></script>
 </body>
 </html>
+
 
 
 
