--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>HomeRates</title>
-    <link rel="stylesheet" href="/assets/app.css">
+  <title>HomeRates</title>  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-white">
   <div id="root"></div>
@@ -18,4 +17,5 @@
   <script src="./HomeRatesApp.js"></script>
 </body>
 </html>
+
 
