--- a/public/index.legacy.html
+++ b/public/index.legacy.html
@@ -4,8 +4,7 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <title>HomeRates.ai Chat  20251010172723  20251010203040</title>
-  <link rel="stylesheet" href="/styles.css?v=20251010172723">
-  <link rel="stylesheet" href="/assets/app.css">
+  <link rel="stylesheet" href="/styles.css?v=20251010172723">  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
   <header class="topbar">
@@ -28,6 +27,7 @@
   <script src="/build-footer.js"></script>
 </body>
 </html>
+
 
 
 
